--- a/om-os.html
+++ b/om-os.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>paradisgaarden.dk - Paradiset for dig og din hest </title>
+    <title>paradisgaarden.dk - Hvem er vi </title>
     <link rel="stylesheet" href="css/style.css">
-    <meta name="description" velkommen til paradiset - content="Paradisets Ridecenter">
+    <meta name="description" velkommen til paradiset - content="Hvem bor hos os">
 </head>
 
-<body>
+<body id="om-os">
     <!--Container div som omslutter alt indhold. Bruges især til at centrere siden-->
     <div id="container">
         <!--Menubar i toppen-->
