--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" velkommen til paradiset - content="Paradisets Ridecenter">
 </head>
 
-<body>
+<body id="forside">
     <!--Container div som omslutter alt indhold. Bruges især til at centrere siden-->
     <div id="container">
         <!--Menubar i toppen-->
@@ -23,7 +23,7 @@
             <!--menuknapper-->
             <ul id="nav" class="pull-right">
                 <li class="menulist"><a href="index.html">Forside</a></li>
-                <li class="menulist"><a href="om - os.html">Om Os</a></li>
+                <li class="menulist"><a href="om-os.html">Om Os</a></li>
                 <li class="menulist"><a href="blog.html">Blog</a></li>
                 <li class="menulist"><a href="kontakt.html">Kontakt</a></li>
             </ul>
