--- a/om-os.html
+++ b/om-os.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paradisgaarden.dk - Hvem er vi </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <meta name="description" velkommen til paradiset - content="Hvem bor hos os">
 </head>
 
