--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paradisgaarden.dk - Se de sidste nye påfund </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <meta name="description" velkommen til paradiset - content="få inspiration til afveklende træning">
 </head>
 
