--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paradisgaarden.dk - Paradiset for dig og din hest </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <meta name="description" velkommen til paradiset - content="Paradisets Ridecenter">
 </head>
 
